--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer_base {
+@layer base {
   body {
     @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide;
   }
